Bug #6023
Quota tab for an SMB share sometimes doesn't work
Start date:
2015-06-21
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
There were a couple races with ZFS dataset creation and mount, where the SMB server would try too soon to setup the .zfs/.$EXTEND/$QUOTA directory (windows uses that directory).
There was also a bug in the logic for checking whether the ACL is set correctly on that directory.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 29e6af5c8e419f0f5edd9e69c2496eb1985a65c1
commit 29e6af5c8e419f0f5edd9e69c2496eb1985a65c1 Author: Alek Pinchuk <alek@nexenta.com> Date: 2015-10-04T15:58:42.000Z 6023 Quota tab for an SMB share sometimes doesn't work Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Approved by: Garrett D'Amore <garrett@damore.org>